<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:ignore="UselessParent"
    tools:context=".MainActivity">
    <TextView
        android:fontFamily="sans-serif-black"
        android:id="@+id/title"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"
        android:textSize="30sp"
        android:text="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_below="@id/title"
        android:id="@+id/top"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="18sp"
            android:fontFamily="sans-serif-medium"
            android:id="@+id/question_num_one"
            android:text="@string/question1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <RadioGroup
            android:id="@+id/rb_question1_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:text="@string/question1_option1"
                android:layout_height="wrap_content"
                android:onClick="onQuestion1AnswerClicked"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/question1_option2"
                android:onClick="onQuestion1AnswerClicked"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:textSize="18sp"
                android:text="@string/question1_option3"
                android:layout_height="wrap_content"
                android:onClick="onQuestion1AnswerClicked"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:textSize="18sp"
                android:text="@string/question1_option4"
                android:layout_height="wrap_content"
                android:onClick="onQuestion1AnswerClicked"/>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/top"
        android:id="@+id/middle"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="18sp"
            android:fontFamily="sans-serif-medium"
            android:id="@+id/question_num_two"
            android:text="@string/question2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:id="@+id/cb_question2_option1"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:text="@string/question2_option1"
            android:layout_height="wrap_content"
            android:onClick="onQuestion2AnswerClicked"/>
        <CheckBox
            android:id="@+id/cb_question2_option2"
            android:text="@string/question2_option2"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onQuestion2AnswerClicked"/>
        <CheckBox
            android:id="@+id/cb_question2_option3"
            android:text="@string/question2_option3"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onQuestion2AnswerClicked"/>
        <CheckBox
            android:id="@+id/cb_question2_option4"
            android:text="@string/question2_option4"
            android:layout_width="wrap_content"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            android:onClick="onQuestion2AnswerClicked"/>
    </LinearLayout>
    <LinearLayout
        android:layout_alignParentBottom="true"
        android:id="@+id/bottom"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:onClick="submit"
            android:text="Submit"
            android:layout_margin="3dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <Button
            android:onClick="reset"
            android:text="Reset"
            android:layout_margin="3dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>
</RelativeLayout>